--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "A Node.js/Express server for facial recognition using TensorFlow and face-api.js.",
   "dependencies": {
     "@tensorflow/tfjs-core": "^4.19.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
