--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server-app",
-  "version": "1.2.1-alpha",
-  "main": "app.js",
+  "version": "1.3.0-alpha",
+  "main": "main.js",
   "scripts": {
     "start": "node main.js",
     "dev": "nodemon main.js"
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
     "helmet": "^7.1.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
