--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server-app",
   "version": "1.3.0-alpha",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node main.js",
-    "dev": "nodemon main.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "facial recognition",
@@ -17,6 +17,7 @@
   "description": "A Node.js/Express server for facial recognition using TensorFlow and face-api.js.",
   "dependencies": {
     "@tensorflow/tfjs-core": "^4.19.0",
+    "@tensorflow/tfjs-node": "^4.19.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.11.2",
