--- a/.env example
+++ b/.env example
@@ -1,18 +1,7 @@
-# URL de conexión a la base de datos MongoDB
-MONGODB_URI= 
-
-# Puerto en el que correrá la aplicación
-PORT= 
-
-# Entorno de la aplicación
-NODE_ENV= development
-#NODE_ENV= production
-
-# Nivel de logging
-LOG_LEVEL= info
-
-# Origen permitido para CORS
-CORS_ORIGIN= http://
-
-# Directorio de carga de archivos
-UPLOAD_DIR= uploads
+MONGODB_URI=
+PORT=
+NODE_ENV=
+LOG_LEVEL=
+UPLOAD_DIR=
+WEBHOOK_SECRET=
+authToken=
