--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "server-app",
-  "version": "1.3.0-alpha",
+  "name": "server-app",  
+  "version": "1.4.0",  
+  "description": "A Node.js/Express server for facial recognition using TensorFlow.js and face-api.js.",
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
@@ -9,31 +10,30 @@
   "keywords": [
     "facial recognition",
     "tensorflow",
+    "tensorflow.js",
     "node.js",
-    "express"
+    "express",
+    "face-api.js"
   ],
-  "author": "johanrengifo78@gmail.com",
+  "author": {
+    "name": "DevSol Org"
+  },
   "license": "ISC",
-  "description": "A Node.js/Express server for facial recognition using TensorFlow and face-api.js.",
   "dependencies": {
-    "@tensorflow/tfjs-core": "^4.19.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
+    "@tensorflow/tfjs-node": "^4.20.0",   
+    "bcrypt": "^5.1.1",   
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
     "helmet": "^7.1.0",
-    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0",
+    "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2",
-    "tfjs-image-recognition-base": "^0.6.2"
+    "nodemon": "^3.1.4" 
   }
 }
